# RSS-Translator

./: .dockerignore  .gitignore  .replit  Dockerfile  LICENSE  README.md  README_EN.md  SECURITY.md  export.html  index.html  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.text  rxconfig.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: Bug_Report.yml  Contribution.yml  Feature__Request.yml  Others.yml
.github/workflows/: dev-docker-image.yml  docker-image.yml  latest-docker-image.yml
api/: settings.py
api/models/: core.py
api/tests/: test_models_core.py
config/: asgi.py  rt_cron  settings.py  urls.py  wsgi.py
core/: actions.py  admin.py  apps.py  context_processors.py  custom_admin_site.py  do_not_use_tasks.py  forms.py  inlines.py  models.py  signals.py  tasks.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_o_feed_name.py  0003_alter_o_feed_options_alter_t_feed_options_and_more.py  0004_o_feed_max_posts.py  0005_alter_o_feed_max_posts_alter_t_feed_sid.py  0006_alter_o_feed_update_frequency.py  0007_o_feed_last_pull_alter_o_feed_modified_and_more.py  0007_remove_o_feed_modified_o_feed_last_pull_and_more.py  0008_alter_t_feed_options_alter_t_feed_sid.py  0009_o_feed_translation_display.py  0010_o_feed_additional_prompt_o_feed_content_type_summary_and_more.py  0011_o_feed_quality.py  0012_o_feed_fetch_article.py  0013_alter_o_feed_sid_alter_t_feed_sid.py  0014_tagulous_o_feed_tags_o_feed_tags.py  0015_rename_tagulous_o_feed_tags_tagulous_o_feed_category_and_more.py  0016_alter_t_feed_translate_title.py  0017_alter_o_feed_content_type_tagulous_feed_category_and_more.py  0018_merge_o_feed_and_t_feed.py  0020_entry.py  (+2 more)
core/models/: __init__.py  base.py  deepl.py  (+6 more)
css/: index.css
deploy/: Caddyfile  Caddyfile_for_docker  docker-compose.yml  install_update.sh  rsstranslator.service  start.sh  uninstall.sh
dev-diaries/: versun-dev-diary.md
docs/: mkdocs.yml  requirements.txt
js/: export.js  index.js
locale/: readme.md
requirements/: dev.txt  prod.txt
rsstranslator/: rsstranslator.py
scripts/: dev_server.py  entrypoint.sh  init.py  prod_server.py
src/: README.md  main.py  requirements.txt
temp/: new_model.py  test_new_model.py
translator/: admin.py  apps.py  models.py  tasks.py
utils/: back_db.py  chunk_handler.py  feed_action.py  modelAdmin_actions.py  modelAdmin_utils.py  notification.py  task_manager.py  text_handler.py
v2/: requirements.txt  rxconfig.py  styles.py
website/: mkdocs.yml  readme.md  requirements.txt
(+281 files in other folders)
