[project]
name = "rss-translator"
version = "2025.5.26"
description = "A Django-based RSS translation service. Compatible with uv/uvicorn."
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-encrypted-model-fields>=0.6.5",
    "django-tagulous2",
    "bs4>=0.0.2",
    "deepl>=1.22.0",
    "google-generativeai>=0.8.5",
    "anthropic>=0.52.0",
    "openai>=1.82.0",
    "volcengine-python-sdk[ark]>=3.0.4",
    "translators>=6.0.0",
    "pydeeplx>=1.0.7",
    "langdetect>=1.0.9",
    "easytranslator>=2024.6.20",
    "feed2json>=2024.4.29",
    "feedgen>=1.0.0",
    "feedparser>=6.0.11",
    "gevent>=25.5.1",
    "html2text>=2025.4.15",
    "cityhash>=0.4.8",
    "lxml>=5.4.0",
    "lxml-html-clean>=0.4.2",
    "mistune>=3.1.3",
    "newspaper4k>=0.9.3.1",
    "opyml>=0.1.2",
    "python-dateutil>=2.9.0.post0",
    "tiktoken>=0.9.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.9.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = [ "config", "core", "locale", "scripts", "translator", "templates", "utils" ] 

[project.scripts]
server = "scripts.prod_server:main"
dev = "scripts.dev_server:main"
init = "scripts.init:init_server"

[tool.uv.sources]
django-tagulous2 = { git = "https://github.com/versun/django-tagulous2" }

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.2.0",
]
